--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </tr>
                     <tr>
                         <td> 취업 </td>
-                        <td colspan="2"> 넥슨 컴퍼니 프론트엔드 엔지니어 (혹은 백엔드)</td>
+                        <td colspan="2"> 게임 프로모션 페이지 개발 (프론트엔드) </td>
                     </tr>
                     <tr>
                         <th colspan="3"> 키워드 </th>
