--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="fp_table_card">
-                <h3> 기본환경 제작 </h3>
+                <h3> 기본환경 </h3>
                 
                 <table>
                     <tr>
