--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div class="frist_page">
 
             <div class="fp_table_card">
-                <h3> 인적사항(예) </h3>
+                <h3> ME </h3>
 
-                <h4> 자기소개 </h4>
+                <h4> 이수빈 / 2003.05.29 / 계원예술대학교_디지털 미디어 디자인_프로그래밍세부전공  </h4>
             </div>
 
             <div class="fp_table_card">
-                <h3> 기본환경 </h3>
+                <h3> 소개 </h3>
                 
                 <table>
                     <tr>
@@ -44,8 +44,24 @@
                         <td colspan="3"> 성실한 / 유연한 / 완벽주의 </td>
                     </tr>
                 </table>
-            </div>
 
+                <h3> 프로젝트 </h3>
+
+                <table>
+                    <tr>
+                        <th> 제목 </th>
+                        <th> 기간 </th>
+                        <th> 개발인원 </th>
+                        <th> 담당역할 </th>
+                    </tr>
+                    <tr>
+                        <td> 도둑 고양이는 누구? </td>
+                        <td> 2024.04.25 ~2024.06.13 </td>
+                        <td> 1명 </td>
+                        <td> 웹 게임 기획, 제작 </td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </body>
 </html>
