--- a/index.html
+++ b/index.html
@@ -49,16 +49,22 @@
 
                 <table>
                     <tr>
-                        <th> 제목 </th>
+                        <th> 제목/링크 </th>
                         <th> 기간 </th>
                         <th> 개발인원 </th>
                         <th> 담당역할 </th>
                     </tr>
                     <tr>
-                        <td> 도둑 고양이는 누구? </td>
+                        <td> <a href="https://subin-lsb.github.io/Who_is_the_thief_cat/"> 도둑 고양이는 누구? </a> </td>
                         <td> 2024.04.25 ~2024.06.13 </td>
                         <td> 1명 </td>
-                        <td> 웹 게임 기획, 제작 </td>
+                        <td> 웹 게임 기획, 제작(HTML5, CSS, JavaScript) </td>
+                    </tr>
+                    <tr>
+                        <td> <a href="https://subin-lsb.github.io/8-Bit_Sketch_Canvas/"> 8비트 스케치 캔버스 </a> </td>
+                        <td> 2024.04.10 ~2024.06.09 </td>
+                        <td> 1명 </td>
+                        <td> 웹사이트 기획, 제작(HTML5, CSS) 기능구현(p5.js) </td>
                     </tr>
                 </table>
             </div>
