--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <th colspan="3"> 키워드 </th>
                     </tr>
                     <tr> 
-                        <td colspan="3"> 성실한 / 유연한 / 완벽주의 </td>
+                        <td colspan="3"> 학습이 빠른 / 성실한 / 유연한 / 완벽주의 </td>
                     </tr>
                 </table>
 
