--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <th colspan="3"> 키워드 </th>
                     </tr>
                     <tr> 
-                        <td colspan="3"> 학습이 빠른 / 성실한 / 유연한 / 완벽주의 </td>
+                        <td colspan="3"> 강한 끈기 / 성실한 / 유연한 / 완벽주의 </td>
                     </tr>
                 </table>
 
@@ -58,13 +58,19 @@
                         <td> <a href="https://subin-lsb.github.io/Who_is_the_thief_cat/"> 도둑 고양이는 누구? </a> </td>
                         <td> 2024.04.25 ~2024.06.13 </td>
                         <td> 1명 </td>
-                        <td> 웹 게임 기획, 제작(HTML5, CSS, JavaScript) </td>
+                        <td> 웹 게임 기획, 개발(HTML5, CSS, JavaScript) </td>
+                    </tr>
+                    <tr>
+                        <td> <a href="https://lixngshxxchxn.github.io/pp24/"> 우리 동네 놀이터 </a> </td>
+                        <td> 2024.03.11 ~2024.06.10 </td>
+                        <td> 3명 </td>
+                        <td> 웹 개발(HTML5, CSS, JavaScript), 어플 마스코트 캐릭터 디자인, 일러스트 </td>
                     </tr>
                     <tr>
                         <td> <a href="https://subin-lsb.github.io/8-Bit_Sketch_Canvas/"> 8비트 스케치 캔버스 </a> </td>
                         <td> 2024.04.10 ~2024.06.09 </td>
                         <td> 1명 </td>
-                        <td> 웹사이트 기획, 제작(HTML5, CSS) 기능구현(p5.js) </td>
+                        <td> 웹사이트 기획, 개발(HTML5, CSS) 기능구현(p5.js) </td>
                     </tr>
                 </table>
             </div>
