--- a/index.html
+++ b/index.html
@@ -1,79 +1,147 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title> 이수빈_포트폴리오 </title>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="style.css" />
 
         <style>
-            table{
-                border-collapse: collapse;
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
             }
-            tr,th,td{
-                text-align: center;
-                border: solid 1px black;
-                padding: 8px;
+            body {
+                background: #402C4B;
+                font-family: Pretendard;
+                color: white;
+            }
+            section {
+                margin-left: 300px;
+                margin-right: 300px;
             }
         </style>
     </head>
+
     <body>
-        <div class="frist_page">
+        <header>
+            <ul>
+                <li> MAIN </li>
+                <li> ABOUT ME </li>
+                <li> <img src="img/Logo.svg" /> </li>
+                <li> PROJECT </li>
+                <li> CONTACT </li>
+            </ul>
+        </header>
 
-            <div class="fp_table_card">
-                <h3> ME </h3>
+        <section id="main_page">
+            <div class="main_box">
 
-                <h4> 이수빈 / 2003.05.29 / 계원예술대학교_디지털 미디어 디자인_프로그래밍세부전공  </h4>
+                <article class="main_T">
+                    <h1> PORTFOLIO </h1>
+                    <p> 완벽함을 위해 끈기를 놓치지 않는 HTML5 웹게임 프로그래머, 이수빈입니다. </p>
+                </article>
+
+                <div class="ghost_position">
+                    <svg class="main_1G G_body" width="243" height="305" viewBox="0 0 243 305" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M121.121 0C61.135 0 12.1236 46.9865 8.88329 106.163H8.71275L0 303.652C6.32446 301.635 9.86044 297.275 13.3964 292.914C18.2194 286.967 23.0424 281.02 34.9412 281.02C46.8401 281.02 51.6631 286.967 56.4861 292.915C61.309 298.862 66.132 304.81 78.0309 304.81C89.9298 304.81 94.7528 298.862 99.5757 292.914C104.399 286.967 109.222 281.02 121.121 281.02C133.019 281.02 137.842 286.967 142.665 292.914C147.488 298.862 152.311 304.81 164.21 304.81C176.109 304.81 180.932 298.862 185.755 292.914C190.578 286.967 195.401 281.02 207.3 281.02C219.199 281.02 224.022 286.967 228.845 292.914C232.381 297.275 235.917 301.635 242.241 303.652L233.528 106.163H233.358C230.117 46.9865 181.106 0 121.121 0Z" fill="white"/>
+
+                        <g class="eyes" transform="translate(0, 0)">
+                            <circle class="eye" cx="148.816" cy="75.6122" r="15.6122" fill="black" />
+                            <circle class="eye" cx="92.6122" cy="75.6122" r="15.6122" fill="black" />
+                        </g>
+                    </svg>
+
+                    <svg class="main_2G G_body" width="243" height="305" viewBox="0 0 243 305" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M121.121 0C61.135 0 12.1236 46.9865 8.88329 106.163H8.71275L0 303.652C6.32446 301.635 9.86044 297.275 13.3964 292.914C18.2194 286.967 23.0424 281.02 34.9412 281.02C46.8401 281.02 51.6631 286.967 56.4861 292.915C61.309 298.862 66.132 304.81 78.0309 304.81C89.9298 304.81 94.7528 298.862 99.5757 292.914C104.399 286.967 109.222 281.02 121.121 281.02C133.019 281.02 137.842 286.967 142.665 292.914C147.488 298.862 152.311 304.81 164.21 304.81C176.109 304.81 180.932 298.862 185.755 292.914C190.578 286.967 195.401 281.02 207.3 281.02C219.199 281.02 224.022 286.967 228.845 292.914C232.381 297.275 235.917 301.635 242.241 303.652L233.528 106.163H233.358C230.117 46.9865 181.106 0 121.121 0Z" fill="white"/>
+
+                        <g class="eyes" transform="translate(0, 0)">
+                            <circle class="eye" cx="148.816" cy="75.6122" r="15.6122" fill="black" />
+                            <circle class="eye" cx="92.6122" cy="75.6122" r="15.6122" fill="black" />
+                        </g>
+                    </svg>
+
+                    <svg class="main_3G G_body" width="243" height="305" viewBox="0 0 243 305" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M121.121 0C61.135 0 12.1236 46.9865 8.88329 106.163H8.71275L0 303.652C6.32446 301.635 9.86044 297.275 13.3964 292.914C18.2194 286.967 23.0424 281.02 34.9412 281.02C46.8401 281.02 51.6631 286.967 56.4861 292.915C61.309 298.862 66.132 304.81 78.0309 304.81C89.9298 304.81 94.7528 298.862 99.5757 292.914C104.399 286.967 109.222 281.02 121.121 281.02C133.019 281.02 137.842 286.967 142.665 292.914C147.488 298.862 152.311 304.81 164.21 304.81C176.109 304.81 180.932 298.862 185.755 292.914C190.578 286.967 195.401 281.02 207.3 281.02C219.199 281.02 224.022 286.967 228.845 292.914C232.381 297.275 235.917 301.635 242.241 303.652L233.528 106.163H233.358C230.117 46.9865 181.106 0 121.121 0Z" fill="white"/>
+
+                        <g class="eyes" transform="translate(0, 0)">
+                            <circle class="eye" cx="148.816" cy="75.6122" r="15.6122" fill="black" />
+                            <circle class="eye" cx="92.6122" cy="75.6122" r="15.6122" fill="black" />
+                        </g>
+                    </svg>
+
+                    <svg class="main_4G G_body" width="243" height="305" viewBox="0 0 243 305" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M121.121 0C61.135 0 12.1236 46.9865 8.88329 106.163H8.71275L0 303.652C6.32446 301.635 9.86044 297.275 13.3964 292.914C18.2194 286.967 23.0424 281.02 34.9412 281.02C46.8401 281.02 51.6631 286.967 56.4861 292.915C61.309 298.862 66.132 304.81 78.0309 304.81C89.9298 304.81 94.7528 298.862 99.5757 292.914C104.399 286.967 109.222 281.02 121.121 281.02C133.019 281.02 137.842 286.967 142.665 292.914C147.488 298.862 152.311 304.81 164.21 304.81C176.109 304.81 180.932 298.862 185.755 292.914C190.578 286.967 195.401 281.02 207.3 281.02C219.199 281.02 224.022 286.967 228.845 292.914C232.381 297.275 235.917 301.635 242.241 303.652L233.528 106.163H233.358C230.117 46.9865 181.106 0 121.121 0Z" fill="white"/>
+
+                        <g class="eyes" transform="translate(0, 0)">
+                            <circle class="eye" cx="148.816" cy="75.6122" r="15.6122" fill="black" />
+                            <circle class="eye" cx="92.6122" cy="75.6122" r="15.6122" fill="black" />
+                        </g>
+                    </svg>
+                </div>
+
             </div>
+        </section>
 
-            <div class="fp_table_card">
-                <h3> 소개 </h3>
-                
-                <table>
-                    <tr>
-                        <th> 목표 유형 </th>
-                        <th colspan="2"> 목표 대상 </th>
-                    </tr>
-                    <tr>
-                        <td> 취업 </td>
-                        <td colspan="2"> 게임 프로모션 페이지 개발 (프론트엔드) / HTML5 게임 개발 </td>
-                    </tr>
-                    <tr>
-                        <th colspan="3"> 키워드 </th>
-                    </tr>
-                    <tr> 
-                        <td colspan="3"> 강한 끈기 / 성실한 / 유연한 / 완벽주의 </td>
-                    </tr>
-                </table>
+        <section id="about_me_page">
+            <div class="about_me_box">
 
-                <h3> 프로젝트 </h3>
+                <div class="about_me_image">
+                    <div class="ghost_image">
+                        <svg class="about_me_1G G_body" width="219" height="358" viewBox="0 0 219 358" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M210.399 101.174C210.399 102.327 210.38 103.475 210.342 104.618L218.113 356.919C212.107 355.178 208.833 351.141 205.558 347.103C201.217 341.75 196.876 336.397 186.167 336.397C175.457 336.397 171.116 341.75 166.775 347.103C162.434 352.456 158.093 357.809 147.383 357.809C136.674 357.809 132.333 352.456 127.992 347.103C123.651 341.75 119.31 336.397 108.6 336.397C97.8903 336.397 93.5493 341.75 89.2083 347.103C84.8673 352.456 80.5263 357.809 69.8166 357.809C59.1069 357.809 54.7659 352.456 50.4249 347.103C46.084 341.75 41.743 336.397 31.0332 336.397C20.3235 336.397 15.9825 341.75 11.6416 347.103C8.53734 350.931 5.43312 354.759 0 356.63L8.0046 96.7675H8.14544C10.4523 42.935 54.8248 0 109.225 0C165.102 0 210.399 45.2971 210.399 101.174Z" fill="white"/>
 
-                <table>
-                    <tr>
-                        <th> 제목/링크 </th>
-                        <th> 기간 </th>
-                        <th> 개발인원 </th>
-                        <th> 담당역할 </th>
-                    </tr>
-                    <tr>
-                        <td> <a href="https://subin-lsb.github.io/Who_is_the_thief_cat/"> 도둑 고양이는 누구? </a> </td>
-                        <td> 2024.04.25 ~2024.06.13 </td>
-                        <td> 1명 </td>
-                        <td> 웹 게임 기획, 개발(HTML5, CSS, JavaScript) </td>
-                    </tr>
-                    <tr>
-                        <td> <a href="https://lixngshxxchxn.github.io/pp24/"> 우리 동네 놀이터 </a> </td>
-                        <td> 2024.03.11 ~2024.06.10 </td>
-                        <td> 3명 </td>
-                        <td> 웹 개발(HTML5, CSS, JavaScript), 어플 마스코트 캐릭터 디자인, 일러스트 </td>
-                    </tr>
-                    <tr>
-                        <td> <a href="https://subin-lsb.github.io/8-Bit_Sketch_Canvas/"> 8비트 스케치 캔버스 </a> </td>
-                        <td> 2024.04.10 ~2024.06.09 </td>
-                        <td> 1명 </td>
-                        <td> 웹사이트 기획, 개발(HTML5, CSS) 기능구현(p5.js) </td>
-                    </tr>
-                </table>
+                            <g class="eyes" transform="translate(0, 0)">
+                                <circle class="eyeEvent" cx="134.639" cy="74.0519" r="14.0519" fill="black"/>
+                                <circle class="eyeEvent" cx="84.0519" cy="74.0519" r="14.0519" fill="black"/>
+                            </g>
+                        </svg>
+
+                        <svg class="about_me_2G G_body" width="170" height="248" viewBox="0 0 170 248" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M170 246.767L164.007 78.3828C163.994 76.9644 163.943 75.5549 163.857 74.1552L163.815 72.99H163.776C160.641 32.157 126.515 0 84.8789 0C41.1758 0 5.74739 35.4284 5.74739 79.1315C5.74739 80.3692 5.77581 81.6001 5.83201 82.8239L0 246.685C4.21189 245.214 6.62823 242.234 9.04456 239.255C12.4398 235.068 15.835 230.881 24.2114 230.881C32.5879 230.881 35.9831 235.068 39.3783 239.255C42.7735 243.442 46.1688 247.628 54.5452 247.628C62.9216 247.628 66.3168 243.442 69.7121 239.255C73.1073 235.068 76.5025 230.881 84.8789 230.881C93.2554 230.881 96.6506 235.068 100.046 239.255C103.441 243.442 106.836 247.628 115.213 247.628C123.589 247.628 126.984 243.442 130.38 239.255C133.775 235.068 137.17 230.881 145.546 230.881C153.923 230.881 157.318 235.068 160.713 239.255C163.176 242.291 165.638 245.327 170 246.767Z" fill="white"/>
+
+                            <g class="eyes" transform="translate(0, 0)">
+                                <circle class="eyeEvent" cx="104.556" cy="70.9905" r="10.9905" fill="black"/>
+                                <circle class="eyeEvent" cx="64.9905" cy="70.9905" r="10.9905" fill="black"/>
+                            </g>
+                        </svg>
+                    </div>
+                </div>
+
+                <article class="about_me_T">
+                    <h1>SUBIN LEE</h1>
+                    <p>HTML5 기반의 웹게임을 제작하는 웹게임 프로그래머 이수빈입니다.<br>
+                       자신만의 웹게임 개발에 끈기를 가지고 끝까지 노력합니다.</p>
+                    <h2>SKILL</h2>
+                    <div class="skills">
+                        <span>C#</span><span>HTML</span><span>CSS</span><span>JavaScript</span>
+                        <span>GitHub</span><span>Unity</span><span>GameMaker</span><span>p5.js</span>
+                        <span>node.js</span><span>jQuery</span><span>figma</span><span>illustrator</span>
+                    </div>
+                    <h2>EDUCATION</h2>
+                    <div class="education_T">
+                        <p>2022.12.23 신림고등학교 졸업</p>
+                        <p>2025.01.01 계원예술대학교 디지털미디어디자인(졸업예정)</p>
+                    </div>
+                </article>
+
             </div>
-        </div>
+        </section>
+
+        <section id="project_page">
+            <div class="project_box">
+
+            </div>
+        </section>
+
+        <section id="contact_page">
+            <div class="contact_box">
+
+            </div>
+        </section>
+
+
+
+        <script src="script.js"></script>
     </body>
 </html>
