--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="project_I">
                     <pre>
                         <code class="language-javascript language-javascript_more4">
-// 두번째 셀 부분 script
+// svg 전체가 아닌 svg 속 페스마다 중심을 축으로 로테이션 되도록 하는 스크립트
 
 document.querySelectorAll('.flower').forEach((path) => {
     const box = path.getBBox(); // 애니메이션 정상 작동을 위해 각 svg 페스마다 중심 설정
@@ -181,7 +181,7 @@ document.querySelectorAll('.flower').forEach((path) => {
 
 
 
-// 세번째 셀 부분 script
+// 고양이 svg 속 eye 요속가 마우스를 따라가는 것 같은 연출을 위한 스크립트
 
 const svgElements = document.querySelectorAll('.cat_body');
 const groupMovementRadius = 10;
@@ -214,7 +214,8 @@ document.addEventListener('mousemove', (event) => {
 
 
 
-// 여섯번째 셀 부분 script
+// 카드 맞추기 미니게임의 주요기능.
+// 마지막으로 플립된 카드를 기억, 동일한 카드일 경우 or 동일하지 않은 카드일 경우
 
 const cardFlips = document.querySelectorAll('.card_flip');
 // const start = document.querySelectorAll('.card_layout');
@@ -263,19 +264,20 @@ cardFlips.forEach(card => {
                 </div>
 
                 <article class="project_T">
-                    <h1> 웹 인터랙션 사이트 </h1>
+                    <h1> 바로 미니게임 </h1>
 
                     <pre>
 자연을 주제로 부드러움과 따뜻함을 가진
-9가지의 인터랙션이 담긴 인터랙션 사이트.
+9가지의 인터랙션이 담긴 미닉게임 기능 사이트.
 
-JavaScript, CSS의 @keyframes을 사용하여
-숨겨진 인터랙션을 찾는 재미가 있는 소소한 미니게임 사이트를 구현
+JavaScript를 주로 사용하여 포인트 앤 클릭,
+카드 맞추기 게임 등 숨겨지거나 예측할 수 있는 인터랙션을
+찾는 재미를 주는 소소한 미니게임 사이트를 구현.
                     </pre>
 
                     <div class="project_more">
                         <div class="more">
-                            <span> 인터랙션 기능 구현 </span>
+                            <span> 미니게임 기능 구현 </span>
                             <span> JavaScript, HTML, CSS </span>
                         </div>
                         <div class="more">
@@ -326,15 +328,17 @@ JavaScript, CSS의 @keyframes을 사용하여
                 <div class="project_I">
                     <pre>
                         <code class="language-javascript language-javascript_more1">
+// 게임 내 NPC들의 상호작용 대사 관련 스크립트
+
 function selectCharacter(characterNumber) {
-        // 캐릭터 버튼에 맞는 내용들을 표시 + addClass 를 사용해 숨겨진 힌트 활성화
+        // 각 NPC에 맞는 내용들을 표시 + addClass 를 사용해 숨겨진 힌트 활성화
         if (characterNumber === 1) {
             currentDialogueArray = dialogueArray1;
             $('.hint1').addClass('active');
         } else if (characterNumber === 2) {
             currentDialogueArray = dialogueArray2;
             $('.hint2').addClass('active');
-        } ...
+        }
         currentDialogueIndex = 0;
         nextBtn.disabled = false;
         dialogueContainer.style.display = 'block'; // 대화창 표시
@@ -366,7 +370,6 @@ function selectCharacter(characterNumber) {
             }, 1000); // 1초 후에 숨김
         }
     }
-        ...
     });
                         </code>
                     </pre>
@@ -601,8 +604,8 @@ p5.js를 사용하여 그림판의 가장 기본적인 기능 중 그리기, 지
 
                 <article class="contact_T">
                     <div class="contact_P CP1">
-                        <p> PHONE &emsp; <span>010-8773-5035</span> </p>
-                        <p> EMAIL &emsp; <span>paya5959@gmail.com</span> </p>
+<!--                        <p> PHONE &emsp; <span>010-8773-5035</span> </p>-->
+                        <p> EMAIL &emsp; <span id="email-text">paya5959@gmail.com</span> </p>
                     </div>
                     <div class="contact_P">
                         <p> GITHUB &emsp; <span onclick="window.open('https://github.com/SUBIN-LSB')">https://github.com/SUBIN-LSB</span> </p>
@@ -614,20 +617,10 @@ p5.js를 사용하여 그림판의 가장 기본적인 기능 중 그리기, 지
 
                     <svg width="228" height="42" viewBox="0 0 228 42" fill="none" xmlns="http://www.w3.org/2000/svg">
 
-                        <g>
-                            <circle cx="21" cy="21" r="21" fill="#78699A"/>
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M19.5633 16.7269C18.227 16.83 16.9991 16.2272 16.2462 15.2324C15.5112 17.385 15.5057 19.7993 16.4013 22.0828C17.5569 25.0292 19.961 27.1157 22.7698 27.9737C22.1417 26.7879 22.1781 25.3018 22.9909 24.1194L24.1624 22.4151C24.6801 21.6621 25.7101 21.4712 26.4631 21.9889L29.8717 24.3319C30.6247 24.8496 30.8155 25.8796 30.2979 26.6326L29.1263 28.3369C28.8595 28.725 28.5322 29.0467 28.1658 29.2982C27.2253 30.3099 26.0655 31.0904 24.7209 31.5502C19.6305 33.2907 13.8192 29.7745 11.7411 23.6967C9.66298 17.6188 12.1049 11.2808 17.1953 9.54032C18.0873 9.23535 19.0014 9.09177 19.9136 9.09508L21.0797 9.00508C22.0076 8.93347 22.8177 9.62756 22.8893 10.5554L23.2135 14.7552C23.2851 15.683 22.591 16.4932 21.6632 16.5648L19.5633 16.7269Z" fill="black"/>
-                        </g>
-
-                        <g onclick="window.open('https://mail.google.com/mail/u/0/#inbox?compose=new')">
-                            <circle cx="83" cy="21" r="21" fill="#78699A"/>
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M71 14.4687L71 14.458V13.2416C71.0377 13.1852 71.0777 13.1297 71.1201 13.0754C72.0666 11.8601 73.8191 11.6423 75.0343 12.5888L83.2152 18.9608L91.3961 12.5888C92.6113 11.6423 94.3637 11.8601 95.3103 13.0754C95.3526 13.1297 95.3926 13.1852 95.4303 13.2416V14.4575L95.4304 14.4687V26.9998C95.4304 28.6567 94.0872 29.9998 92.4304 29.9998H89.8523V20.8617L83.3048 25.9614L83.2371 26.0483L83.2152 26.0312L83.1932 26.0483L83.1255 25.9614L76.5781 20.8617V29.9998H74C72.3431 29.9998 71 28.6567 71 26.9998V14.4687Z" fill="black"/>
-                        </g>
-
                         <g onclick="window.open('https://github.com/SUBIN-LSB')">
-                            <circle cx="145" cy="21" r="21" fill="black"/>
+                            <circle cx="145" cy="21" r="21" fill="white"/>
                             <mask id="mask0_198_85" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="124" y="0" width="42" height="42">
-                                <circle cx="145" cy="21" r="21" fill="black"/>
+                                <circle cx="145" cy="21" r="21" fill="white"/>
                             </mask>
                             <g mask="url(#mask0_198_85)">
                                 <path d="M133.608 11.8081C133.608 11.8081 133.504 9.41977 134.446 8.45347C136.145 6.71143 140.311 10.5501 140.311 10.5501C140.311 10.5501 143.605 9.75475 145.757 9.71146C148.232 9.66166 152.041 10.5501 152.041 10.5501C152.041 10.5501 155.469 7.04983 157.068 8.45347C158.082 9.34383 157.905 12.2275 157.905 12.2275V14.7434C157.905 14.7434 160 17.0168 160 21.0335C160 30.678 150.365 30.678 150.365 30.678C150.365 30.678 151.09 32.5723 151.203 34.0327C151.622 39.4841 151.622 42 151.622 42H139.892V37.3874C139.892 37.3874 138.19 37.4854 137.378 37.3874C135.629 37.1764 134.935 37.2897 133.608 36.1294C132.446 35.1131 132.546 33.5041 131.514 32.3554C130.659 31.4043 129 30.2587 129 30.2587C129 30.2587 131.135 29.7478 132.351 30.2587C134.058 30.9757 133.989 32.9144 135.703 33.6134C137.369 34.2931 139.892 34.0328 139.892 34.0328C139.892 34.0328 140.08 32.9897 140.311 32.3554C140.562 31.6674 141.149 30.678 141.149 30.678C141.149 30.678 131.514 30.678 131.514 21.0335C131.514 17.0593 133.608 14.7434 133.608 14.7434V11.8081Z" fill="#78699A"/>
@@ -638,7 +631,7 @@ p5.js를 사용하여 그림판의 가장 기본적인 기능 중 그리기, 지
                         </g>
                         <g onclick="window.open('https://docs.google.com/document/d/1X-iGKomjhhPn27SIEkodSomuFMtppGFH4Vi5cwKuTFo/edit?usp=sharing')">
                             <circle cx="207" cy="21" r="21" fill="#78699A"/>
-                            <path d="M197 9C197 8.44772 197.448 8 198 8H216C216.552 8 217 8.44772 217 9V30C217 32.2091 215.209 34 213 34H198C197.448 34 197 33.5523 197 33V9Z" fill="black"/>
+                            <path d="M197 9C197 8.44772 197.448 8 198 8H216C216.552 8 217 8.44772 217 9V30C217 32.2091 215.209 34 213 34H198C197.448 34 197 33.5523 197 33V9Z" fill="white"/>
                             <path d="M200.4 12L213.4 12" stroke="#78699A" stroke-width="2" stroke-linecap="round"/>
                             <path d="M200.4 17L213.4 17" stroke="#78699A" stroke-width="2" stroke-linecap="round"/>
                             <path d="M200.4 22L213.4 22" stroke="#78699A" stroke-width="2" stroke-linecap="round"/>
